Changed expression_visitors into a templated class so it can be specialized to return any value.

--- a/lumina/CMakeLists.txt
+++ b/lumina/CMakeLists.txt
@@ -1,13 +1,3 @@
-project(lumina)
-
-set(LUMINA_EXE_NAME "lumina")
-set(LUMINA_CORE_NAME "lumina-core")
-
-set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
-set(CMAKE_CXX_EXTENSIONS OFF)
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-
 set(SOURCES
     "src/lumina_app.cpp"
 
@@ -17,6 +7,7 @@ set(SOURCES
     "src/lexer_exceptions.cpp"
     "src/lexer.cpp"
     "src/logger.cpp"
+    "src/lumina_types.cpp"
     "src/parser.cpp"
     "src/parser_exceptions.cpp"
     "src/tokens.cpp"
@@ -33,6 +24,7 @@ set(HEADERS
     "include/lexer_exceptions.h"
     "include/lexer.h"
     "include/logger.h"
+    "include/lumina_types.h"
     "include/parser.h"
     "include/parser_exceptions.h"
     "include/typedefs.h"
@@ -40,8 +32,8 @@ set(HEADERS
 )
 
 # Setup the core library
-add_library(${LUMINA_CORE_NAME} STATIC ${SOURCES} ${HEADERS})
-target_include_directories(${LUMINA_CORE_NAME} PUBLIC "include")
+add_library(lumina-core STATIC ${SOURCES} ${HEADERS})
+target_include_directories(lumina-core PUBLIC "include")
 
 set(LOG_LEVELS TRACE DEBUG INFO WARN ERROR CRITICAL OFF)
 set(LOG_LEVEL "TRACE" CACHE STRING "The log level to use. Options are: ${LOG_LEVELS}")
@@ -52,25 +44,25 @@ if(LOG_LEVEL_INDEX EQUAL -1)
 endif()
 
 if(LOG_LEVEL STREQUAL "TRACE")
-    target_compile_definitions(${LUMINA_CORE_NAME} PUBLIC LUMINA_LOG_LEVEL_TRACE SPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_TRACE)
+    target_compile_definitions(lumina-core PUBLIC LUMINA_LOG_LEVEL_TRACE SPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_TRACE)
 elseif(LOG_LEVEL STREQUAL "DEBUG")
-    target_compile_definitions(${LUMINA_CORE_NAME} PUBLIC LUMINA_LOG_LEVEL_DEBUG SPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_DEBUG)
+    target_compile_definitions(lumina-core PUBLIC LUMINA_LOG_LEVEL_DEBUG SPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_DEBUG)
 elseif (LOG_LEVEL STREQUAL "INFO")
-    target_compile_definitions(${LUMINA_CORE_NAME} PUBLIC LUMINA_LOG_LEVEL_INFO SPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_INFO)
+    target_compile_definitions(lumina-core PUBLIC LUMINA_LOG_LEVEL_INFO SPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_INFO)
 elseif (LOG_LEVEL STREQUAL "WARN")
-    target_compile_definitions(${LUMINA_CORE_NAME} PUBLIC LUMINA_LOG_LEVEL_WARN SPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_WARN)
+    target_compile_definitions(lumina-core PUBLIC LUMINA_LOG_LEVEL_WARN SPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_WARN)
 elseif (LOG_LEVEL STREQUAL "ERROR")
-    target_compile_definitions(${LUMINA_CORE_NAME} PUBLIC LUMINA_LOG_LEVEL_ERROR SPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_ERROR)
+    target_compile_definitions(lumina-core PUBLIC LUMINA_LOG_LEVEL_ERROR SPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_ERROR)
 elseif (LOG_LEVEL STREQUAL "CRITICAL")
-    target_compile_definitions(${LUMINA_CORE_NAME} PUBLIC LUMINA_LOG_LEVEL_CRITICAL SPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_CRITICAL)
+    target_compile_definitions(lumina-core PUBLIC LUMINA_LOG_LEVEL_CRITICAL SPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_CRITICAL)
 elseif (LOG_LEVEL STREQUAL "OFF")
-    target_compile_definitions(${LUMINA_CORE_NAME} PUBLIC LUMINA_LOG_LEVEL_OFF SPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_OFF)
+    target_compile_definitions(lumina-core PUBLIC LUMINA_LOG_LEVEL_OFF SPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_OFF)
 endif()
 
 find_package(spdlog CONFIG REQUIRED)
-target_link_libraries(${LUMINA_CORE_NAME} PRIVATE spdlog::spdlog)
+target_link_libraries(lumina-core PRIVATE spdlog::spdlog)
 
 # Setup the executable
-add_executable(${LUMINA_EXE_NAME} "main.cpp")
-target_link_libraries(${LUMINA_EXE_NAME} PRIVATE ${LUMINA_CORE_NAME})
+add_executable(lumina "main.cpp")
+target_link_libraries(lumina PRIVATE lumina-core)
 
