Put the interpreter into its own class/header file combo, away from the rest of the visitors as it will be more important.  Rearranged all the exceptions to be in one file

--- a/lumina/CMakeLists.txt
+++ b/lumina/CMakeLists.txt
@@ -2,14 +2,14 @@ set(SOURCES
     "src/lumina_app.cpp"
 
     "src/console_io.cpp"
+    "src/exceptions.cpp"
     "src/expressions.cpp"
     "src/expression_visitors.cpp"
-    "src/lexer_exceptions.cpp"
+    "src/interpreter.cpp"
     "src/lexer.cpp"
     "src/logger.cpp"
     "src/lumina_types.cpp"
     "src/parser.cpp"
-    "src/parser_exceptions.cpp"
     "src/tokens.cpp"
 )
 
@@ -18,17 +18,18 @@ set(HEADERS
 
     "include/i_logger.h"
 
+    "include/console_io.h"
+    "include/exceptions.h"
     "include/expressions.h"
     "include/expression_visitors.h"
-    "include/console_io.h"
-    "include/lexer_exceptions.h"
+    "include/interpreter.h"
     "include/lexer.h"
     "include/logger.h"
     "include/lumina_types.h"
     "include/parser.h"
-    "include/parser_exceptions.h"
-    "include/typedefs.h"
     "include/tokens.h"
+
+    "include/typedefs.h"
 )
 
 # Setup the core library
