Changed the cached string LOG_LEVELS to have a set property to work more cleanly with cmake-gui

--- a/lumina/CMakeLists.txt
+++ b/lumina/CMakeLists.txt
@@ -38,6 +38,7 @@ target_include_directories(lumina-core PUBLIC "include")
 
 set(LOG_LEVELS TRACE DEBUG INFO WARN ERROR CRITICAL OFF)
 set(LOG_LEVEL "TRACE" CACHE STRING "The log level to use. Options are: ${LOG_LEVELS}")
+set_property(CACHE LOG_LEVEL PROPERTY STRINGS ${LOG_LEVELS})
 
 list(FIND LOG_LEVELS ${LOG_LEVEL} LOG_LEVEL_INDEX)
 if(LOG_LEVEL_INDEX EQUAL -1)
