Git versioning now provides the version number for the project.  When a git commit is tagged, that tag is extracted then stripped down from the format 'v[x.y.z]' (major, minor, patch) down into a format that can then be passed into the version.txt file, the vcpkg.json file, and the project() command.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,25 +1,43 @@
 cmake_minimum_required(VERSION 3.21)
 
-# Extract the version from the version.txt file
-file(READ version.txt VERSION_FILE)
-string(REGEX MATCH "^[^\n]+" LUMINA_VERSION "${VERSION_FILE}")
-message(STATUS "Building Lumina version: ${LUMINA_VERSION}")
+execute_process(
+  COMMAND git describe --tags --always
+  OUTPUT_VARIABLE GIT_VERSION_TAG
+  OUTPUT_STRIP_TRAILING_WHITESPACE
+)
 
-# Set the project version, and the vcpkg.json to that of the Lumina version
-file(READ vcpkg.json VCPKG_JSON)
+message("Git version tag: ${GIT_VERSION_TAG}")
 
-set(VCPKG_REGEX_MATCH    "\"version-string\": \"[0-9]+\.[0-9]+\.[0-9]+\"")
-set(VCPKG_REPLACE_STRING "\"version-string\": \"${LUMINA_VERSION}\"")
-string(REGEX REPLACE ${VCPKG_REGEX_MATCH} ${VCPKG_REPLACE_STRING} VCPKG_VERSION "${VCPKG_JSON}")
+string(REGEX REPLACE "v" "" GIT_VERSION ${GIT_VERSION_TAG})
+string(REGEX REPLACE "-.*" "" GIT_VERSION ${GIT_VERSION})
+message("Git version (stripped): ${GIT_VERSION}")
 
-message(STATUS "Writing to vcpkg.json project version: ${VCPKG_VERSION}")
-file(WRITE vcpkg.json "${VCPKG_VERSION}")
+# --- Update version.txt ---
 
-project(lumina VERSION ${LUMINA_VERSION} LANGUAGES CXX)
+file(READ version.txt VERSION_FILE_CONTENT)
+string(REGEX REPLACE "^[^\n]+" "${GIT_VERSION}" VERSION_FILE_CONTENT ${VERSION_FILE_CONTENT})
+file(WRITE version.txt ${VERSION_FILE_CONTENT})
+
+# --- Update vcpkg.json ---
+
+file(READ vcpkg.json VCPKG_JSON_CONTENT)
+
+set(VCPKG_REGEX_MATCH "\"version-string\": \"[0-9]+\\.[0-9]+\\.[0-9]+.*\",\n")
+set(VCPKG_REPLACE_STRING "\"version-string\": \"${GIT_VERSION}\",\n")
+
+string(REGEX REPLACE ${VCPKG_REGEX_MATCH} ${VCPKG_REPLACE_STRING} VCPKG_JSON_UPDATED ${VCPKG_JSON_CONTENT})
+message(STATUS "Writing to vcpkg.json with project version: ${VCPKG_JSON_UPDATED}")
+file(WRITE vcpkg.json "${VCPKG_JSON_UPDATED}")
+
+# --- Set the project version ---
+
+project(lumina VERSION ${GIT_VERSION} LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
+# --- Add subdirectories ---
 
 add_subdirectory(lumina)
