--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Created by https://www.toptal.com/developers/gitignore/api/cmake,linux,windows,visualstudio,c++
 # Edit at https://www.toptal.com/developers/gitignore?templates=cmake,linux,windows,visualstudio,c++
 
+version.txt
+
 ### C++ ###
 [Bb]in/*
 [Oo]bj/*
