Changed CMakeLists.txt check for LOG_LEVELS to perform an IN_LIST test instead of storing the index

--- a/lumina/CMakeLists.txt
+++ b/lumina/CMakeLists.txt
@@ -40,8 +40,7 @@ set(LOG_LEVELS TRACE DEBUG INFO WARN ERROR CRITICAL OFF)
 set(LOG_LEVEL "TRACE" CACHE STRING "The log level to use. Options are: ${LOG_LEVELS}")
 set_property(CACHE LOG_LEVEL PROPERTY STRINGS ${LOG_LEVELS})
 
-list(FIND LOG_LEVELS ${LOG_LEVEL} LOG_LEVEL_INDEX)
-if(LOG_LEVEL_INDEX EQUAL -1)
+if (NOT LOG_LEVEL IN_LIST LOG_LEVELS)
     message(FATAL_ERROR "Invalid log level: ${LOG_LEVEL}. Options are: ${LOG_LEVELS}")
 endif()
 
