--- a/lumina/CMakeLists.txt
+++ b/lumina/CMakeLists.txt
@@ -36,29 +36,7 @@ set(HEADERS
 add_library(lumina-core STATIC ${SOURCES} ${HEADERS})
 target_include_directories(lumina-core PUBLIC "include")
 
-set(LOG_LEVELS TRACE DEBUG INFO WARN ERROR CRITICAL OFF)
-set(LOG_LEVEL "TRACE" CACHE STRING "The log level to use. Options are: ${LOG_LEVELS}")
-set_property(CACHE LOG_LEVEL PROPERTY STRINGS ${LOG_LEVELS})
-
-if (NOT LOG_LEVEL IN_LIST LOG_LEVELS)
-    message(FATAL_ERROR "Invalid log level: ${LOG_LEVEL}. Options are: ${LOG_LEVELS}")
-endif()
-
-if(LOG_LEVEL STREQUAL "TRACE")
-    target_compile_definitions(lumina-core PUBLIC LUMINA_LOG_LEVEL_TRACE SPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_TRACE)
-elseif(LOG_LEVEL STREQUAL "DEBUG")
-    target_compile_definitions(lumina-core PUBLIC LUMINA_LOG_LEVEL_DEBUG SPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_DEBUG)
-elseif (LOG_LEVEL STREQUAL "INFO")
-    target_compile_definitions(lumina-core PUBLIC LUMINA_LOG_LEVEL_INFO SPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_INFO)
-elseif (LOG_LEVEL STREQUAL "WARN")
-    target_compile_definitions(lumina-core PUBLIC LUMINA_LOG_LEVEL_WARN SPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_WARN)
-elseif (LOG_LEVEL STREQUAL "ERROR")
-    target_compile_definitions(lumina-core PUBLIC LUMINA_LOG_LEVEL_ERROR SPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_ERROR)
-elseif (LOG_LEVEL STREQUAL "CRITICAL")
-    target_compile_definitions(lumina-core PUBLIC LUMINA_LOG_LEVEL_CRITICAL SPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_CRITICAL)
-elseif (LOG_LEVEL STREQUAL "OFF")
-    target_compile_definitions(lumina-core PUBLIC LUMINA_LOG_LEVEL_OFF SPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_OFF)
-endif()
+include(cmake/lumina_logging.cmake)
 
 find_package(spdlog CONFIG REQUIRED)
 find_package(Catch2 CONFIG REQUIRED)
