--- a/lumina/CMakeLists.txt
+++ b/lumina/CMakeLists.txt
@@ -43,10 +43,21 @@ target_include_directories(lumina-core PUBLIC "include")
 
 include(cmake/logging.cmake)
 
+include(FetchContent)
+
+FetchContent_Declare(linenoise
+    GIT_REPOSITORY https://github.com/antirez/linenoise
+    GIT_TAG master
+)
+
+FetchContent_MakeAvailable(linenoise)
+add_library(linenoise STATIC ${linenoise_SOURCE_DIR}/linenoise.c)
+target_include_directories(linenoise PUBLIC ${linenoise_SOURCE_DIR})
+
 find_package(spdlog CONFIG REQUIRED)
 find_package(Catch2 CONFIG REQUIRED)
 
-target_link_libraries(lumina-core PRIVATE spdlog::spdlog)
+target_link_libraries(lumina-core PRIVATE spdlog::spdlog linenoise)
 target_compile_definitions(lumina-core PUBLIC "LUMINA_VERSION=\"${PROJECT_VERSION}\"")
 
 # Setup the executable
