Project wide rename from lumina to geo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ execute_process(
   OUTPUT_STRIP_TRAILING_WHITESPACE
 )
 
-option(LUMINA_ENABLE_TESTS "Enable building tests" ON)
+option(GEO_ENABLE_TESTS "Enable building tests" ON)
 
 include(cmake/git_version.cmake)
 get_git_version(GIT_VERSION)
@@ -14,19 +14,19 @@ get_git_version(GIT_VERSION)
 update_version_file(version.txt ${GIT_VERSION})
 update_vcpkg_json(vcpkg.json ${GIT_VERSION})
 
-project(lumina VERSION ${GIT_VERSION} LANGUAGES C CXX)
+project(geo VERSION ${GIT_VERSION} LANGUAGES C CXX)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-add_subdirectory(lumina)
+add_subdirectory(geo)
 
-if (LUMINA_ENABLE_TESTS)
-    message(STATUS "LUMINA_ENABLE_TESTS was ON, building test executables")
+if (GEO_ENABLE_TESTS)
+    message(STATUS "GEO_ENABLE_TESTS was ON, building test executables")
     enable_testing()
     add_subdirectory(tests)
 else()
-    message(STATUS "LUMINA_ENABLE_TESTS was OFF, test executables will not be built")
+    message(STATUS "GEO_ENABLE_TESTS was OFF, test executables will not be built")
 endif()
