--- a/geo/CMakeLists.txt
+++ b/geo/CMakeLists.txt
@@ -10,6 +10,7 @@ set(SOURCES
     "src/lexer.cpp"
     "src/logger.cpp"
     "src/geo_types.cpp"
+    "src/geo_native_funcs.cpp"
     "src/parser.cpp"
     "src/statements.cpp"
     "src/tokens.cpp"
@@ -29,6 +30,7 @@ set(HEADERS
     "include/lexer.h"
     "include/logger.h"
     "include/geo_types.h"
+    "include/geo_native_funcs.h"
     "include/parser.h"
     "include/statements.h"
     "include/statement_visitors.h"
