Handed off environment creating to the environment scope guard class.  If an environment is passed to it, it will use that as the current environment and handle the resetting of the interpreter _curr_environment stack.  If it is passed nullptr, it will create a new environment.

--- a/geo/CMakeLists.txt
+++ b/geo/CMakeLists.txt
@@ -10,7 +10,7 @@ set(SOURCES
     "src/lexer.cpp"
     "src/logger.cpp"
     "src/geo_types.cpp"
-    "src/geo_native_funcs.cpp"
+    "src/geo_functions.cpp"
     "src/parser.cpp"
     "src/statements.cpp"
     "src/tokens.cpp"
@@ -30,7 +30,7 @@ set(HEADERS
     "include/lexer.h"
     "include/logger.h"
     "include/geo_types.h"
-    "include/geo_native_funcs.h"
+    "include/geo_functions.h"
     "include/parser.h"
     "include/statements.h"
     "include/statement_visitors.h"
