Began working on the resolver

--- a/geo/CMakeLists.txt
+++ b/geo/CMakeLists.txt
@@ -6,12 +6,13 @@ set(SOURCES
     "src/exceptions.cpp"
     "src/expressions.cpp"
     "src/expression_visitors.cpp"
+    "src/geo_types.cpp"
+    "src/geo_functions.cpp"
     "src/interpreter.cpp"
     "src/lexer.cpp"
     "src/logger.cpp"
-    "src/geo_types.cpp"
-    "src/geo_functions.cpp"
     "src/parser.cpp"
+    "src/resolver.cpp"
     "src/statements.cpp"
     "src/tokens.cpp"
 )
@@ -26,12 +27,13 @@ set(HEADERS
     "include/exceptions.h"
     "include/expressions.h"
     "include/expression_visitors.h"
+    "include/geo_types.h"
+    "include/geo_functions.h"
     "include/interpreter.h"
     "include/lexer.h"
     "include/logger.h"
-    "include/geo_types.h"
-    "include/geo_functions.h"
     "include/parser.h"
+    "include/resolver.h"
     "include/statements.h"
     "include/statement_visitors.h"
     "include/tokens.h"
