--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,8 @@
 cmake_minimum_required(VERSION 3.21)
 
+set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>" CACHE STRING "MSVC runtime" FORCE)
+set(MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>" CACHE STRING "MSVC runtime" FORCE)
+
 execute_process(
   COMMAND git describe --tags --always
   OUTPUT_VARIABLE GIT_VERSION_TAG
@@ -14,7 +17,7 @@ get_git_version(GIT_VERSION)
 update_version_file(version.txt ${GIT_VERSION})
 update_vcpkg_json(vcpkg.json ${GIT_VERSION})
 
-project(geo VERSION ${GIT_VERSION} LANGUAGES C CXX)
+project(geo VERSION ${GIT_VERSION} LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
@@ -23,7 +26,7 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 add_subdirectory(geo)
 
-if (GEO_ENABLE_TESTS)
+if(GEO_ENABLE_TESTS)
     message(STATUS "GEO_ENABLE_TESTS was ON, building test executables")
     enable_testing()
     add_subdirectory(tests)
