Fixed memory lifetime problem when function_declaration_statement& were going out of scope in REPL mode.  geo_app now stores all old statements for the duration of the program runtime.

--- a/geo/CMakeLists.txt
+++ b/geo/CMakeLists.txt
@@ -7,6 +7,7 @@ set(SOURCES
     "src/exceptions.cpp"
     "src/expressions.cpp"
     "src/expression_visitors.cpp"
+    "src/geo_classes.cpp"
     "src/geo_types.cpp"
     "src/geo_functions.cpp"
     "src/interpreter.cpp"
@@ -29,6 +30,7 @@ set(HEADERS
     "include/exceptions.h"
     "include/expressions.h"
     "include/expression_visitors.h"
+    "include/geo_classes.h"
     "include/geo_types.h"
     "include/geo_functions.h"
     "include/interpreter.h"
