All memory management now goes through a global static registry called memory manager

--- a/geo/CMakeLists.txt
+++ b/geo/CMakeLists.txt
@@ -11,6 +11,7 @@ set(SOURCES
     "src/interpreter.cpp"
     "src/lexer.cpp"
     "src/logger.cpp"
+    "src/memory_manager.cpp"
     "src/parser.cpp"
     "src/resolver.cpp"
     "src/statements.cpp"
@@ -33,6 +34,7 @@ set(HEADERS
     "include/lexer.h"
     "include/logger.h"
     "include/parser.h"
+    "include/memory_manager.h"
     "include/resolver.h"
     "include/statements.h"
     "include/statement_visitors.h"
