Project wide rename to cpplox

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ execute_process(
   OUTPUT_STRIP_TRAILING_WHITESPACE
 )
 
-option(GEO_ENABLE_TESTS "Enable building tests" ON)
+option(CPPLOX_ENABLE_TESTS "Enable building tests" ON)
 
 include(cmake/git_version.cmake)
 get_git_version(GIT_VERSION)
@@ -17,19 +17,19 @@ get_git_version(GIT_VERSION)
 update_version_file(version.txt ${GIT_VERSION})
 update_vcpkg_json(vcpkg.json ${GIT_VERSION})
 
-project(geo VERSION ${GIT_VERSION} LANGUAGES CXX)
+project(cpp-lox VERSION ${GIT_VERSION} LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-add_subdirectory(geo)
+add_subdirectory(cpp-lox)
 
-if(GEO_ENABLE_TESTS)
-    message(STATUS "GEO_ENABLE_TESTS was ON, building test executables")
+if(CPPLOX_ENABLE_TESTS)
+    message(STATUS "CPPLOX_ENABLE_TESTS was ON, building test executables")
     enable_testing()
     add_subdirectory(tests)
 else()
-    message(STATUS "GEO_ENABLE_TESTS was OFF, test executables will not be built")
+    message(STATUS "CPPLOX_ENABLE_TESTS was OFF, test executables will not be built")
 endif()
