--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,17 +3,17 @@ find_package(Catch2 CONFIG REQUIRED)
 add_executable(lexer-tests "lexer_tests.cpp")
 add_executable(parser-tests "parser_tests.cpp")
 
-target_link_libraries(lexer-tests  PRIVATE geo-core Catch2::Catch2WithMain)
-target_link_libraries(parser-tests PRIVATE geo-core Catch2::Catch2WithMain)
+target_link_libraries(lexer-tests  PRIVATE cpp-lox-core Catch2::Catch2WithMain)
+target_link_libraries(parser-tests PRIVATE cpp-lox-core Catch2::Catch2WithMain)
 
 include(CTest)
 include(Catch)
 
-file(GLOB TEST_FILES ${CMAKE_SOURCE_DIR}/tests/*.geo)
+file(GLOB TEST_FILES ${CMAKE_SOURCE_DIR}/tests/*.cpplox)
 
 foreach(test_file ${TEST_FILES})
     get_filename_component(test_name ${test_file} NAME_WE)
-    add_test(NAME ${test_name} COMMAND geo ${test_file})
+    add_test(NAME ${test_name} COMMAND cpp-lox ${test_file})
     message(STATUS "Adding test for ${test_file}")
 endforeach()
 
